--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Admin Dashboard Created using ReactJS" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Admin Dashboard</title>
+  <title>inventory-and-track-orders</title>
 </head>
 
 <body>
